Version 2.6.0

  Bugfixes:
  - Inserting CLOBs with the server option "nchar" on can lead to the error
    "ORA-24806: LOB form mismatch".
    Report and patch by "jopoly".

  Enhancements:
  - Skip Oracle savepoint management if the foreign server option
    "isolation_level" is set to "read_only" or if we are inside a read-only
    PostgreSQL transaction.  This saves some round trips and avoids Oracle
    errors that might be thrown when entering a PL/pgSQL exception handler.
    Per suggestion from "math-g".

Version 2.5.0, released 2022-10-28

  Bugfixes:
  - Use the correct user mapping for views on foreign tables.
    This should use the mapping associated with the view owner.
    Reported by "JSilex".
  - Fix a spurious error on UPDATE or DELETE if the column options "key" and
    "strip_zeros" are used on the same column.
    Report and patch by Noriyoshi Shinoda.
  - Fix "out of memory" and other errors on Linux systems with FIPS enabled.
    The cause is that calculating MD5 hashes on such systems causes errors.
    Reported by Hank Drews.
  - Handle Oracle's TIMESTAMP WITH LOCAL TIME ZONE correctly.
    Oracle converts such values to its session time zone on output, but does not
    add a time zone offset, so PostgreSQL interpreted them incorrectly.
    Reported by "JamesInform".

  Enhancements:
  - Improve the Makefile so that the build process automatically detects
    Oracle Instant Client installations installed by packages on Linux.
    Patch by Christian Ullrich.

Version 2.4.0, released 2021-09-24

  Enhancements:
  - Support push-down of "uuid" values.
    Per request from Asish Kumar Gaddipati.
  - Introduce a server option "nchar", turned "off" by default.
    This option, if set, enables the fix for NCHAR and NVARCHAR2 columns
    introduced in 2.3.0.
    We don't want that by default, since it causes a noticable performance
    hit and makes UPDATEs with long strings fail with ORA-01461.